# python-tutorial

./: README.md  pyproject.toml
src/python_tutorial/: 00_intro.ipynb  __main__.py
src/python_tutorial/lessons/: 01_basics.ipynb
