[project]
name = "python_tutorial"
version = "0.1.0"
description = "Simple Python tutorial"
authors = [
    {name = "radoskov", email = "radoslav.skoviera@cvut.cz"},
]
dependencies = [
    "ipython>=8.28.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
run = "python_tutorial.__main__:main"

[tool.pdm]
distribution = true
